--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,21 @@ body {
     display: flex;
 }
 
+button {
+    height: 50px;
+}
 
 #container {
-    display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    width: 800px;
-    height: 800px;
+    display: flex;
+    flex: none;
+    flex-wrap: wrap;
+    width: 1600px;
+    height: 1600px;
 }
 
 box {
     display: flex;
-    height: 50px;
-    width: 50px;
+    flex: auto;
+    height: 100px;
+    width: 100px;
 }
