--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,7 @@ body {
 button {
     height: 50px;
     width: 30vw;
-    margin-right: 50px;
-    font-size: medium;
+    font-size: x-large;
 }
 
 .header {
@@ -30,8 +29,9 @@ button {
     display: flex;
     flex: none;
     flex-wrap: wrap;
-    height: 1600px;
-    width: 1600px;
-    margin-top: 50px;
+    height: 1800px;
+    width: 1800px;
+    margin-top: 40px;
+    border-color: #1F2937;
     border: 1px solid;
 }
