Turn draw event into a function and add ability to draw with randomly generated colors at the click of a button.

--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,9 @@ body {
 
 button {
     height: 50px;
-    width: 30vw;
+    width: auto;
     font-size: x-large;
+    margin-right: 20px;
 }
 
 .header {
